gk/web-api/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-api
  namespace: wallet
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wallet-api
  template:
    metadata:
      name: wallet-api
      labels:
        app: wallet-api
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: wallet-api-config-test
            defaultMode: 420
      containers:
        - name: wallet-api-test
          image: gamekeeperz/test-wallet-repo:wallet-api-test
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
