gk/web-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: wallet-api
  namespace: wallet
spec:
  selector:
    app: wallet-api
  ports:
    - name: 9000-5000
      protocol: TCP
      port: 9000
      targetPort: 5000
